# llm-twin-course

./: .env.example  .gitignore  GENERATE_INSTRUCT_DATASET.md  INSTALL_AND_USAGE.md  LICENSE  Makefile  RAG.md  README.md  TRAINING.md  docker-bake.hcl  docker-compose-superlinked.yml  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
.docker/: .dockerignore  Dockerfile.bytewax  Dockerfile.bytewax.superlinked  Dockerfile.cdc  Dockerfile.crawlers  Dockerfile.data_cdc  Dockerfile.data_crawlers
.github/ISSUE_TEMPLATE/: clarify-concept.md  questions-about-the-course-material.md  technical-troubleshooting-or-bugs.md
.github/workflows/: crawler.yml
1-data-crawling/: config.py  dispatcher.py  lib.py  main.py
1-data-crawling/crawlers/: __init__.py  base.py  github.py  linkedin.py  medium.py
1-data-crawling/db/: documents.py  mongo.py
2-data-ingestion/: README.md  cdc.py  config.py  mq.py  test_cdc.py
2-data-ingestion/data_flow/: mq.py
3-feature-pipeline/: config.py  db.py  insert_data_mongo.py  mq.py  retriever.py
3-feature-pipeline/data_flow/: bytewax_pipeline.py  mq.py  stream_input.py  stream_output.py
3-feature-pipeline/data_logic/: chunking_data_handlers.py  cleaning_data_handlers.py  (+2 more)
4-finetuning/: README.md
5-inference/: config.py  evaluate.py  evaluate_monitoring.py  inference_pipeline.py  main.py  pyproject.toml
6-bonus-superlinked-rag/: README.md  config.py  dummy_requests.py  local_test.py  main.py  mq.py  retriever.py  superlinked_client.py  superlinked_engine.py  utils.py
6-superlinked-rag/: _main.py  config.py  d.py  local_test.py  main.py  superlinked_engine.py
core/: __init__.py  config.py  lib.py  opik_utils.py
course/module-1/: .env.example  Makefile  config.py  db.py  dispatcher.py  documents.py  errors.py  main.py  pyproject.toml
course/module-1/crawlers/: __init__.py  base.py  github.py  linkedin.py  medium.py
course/module-3/: .env.example  .gitignore  Makefile  README.md  cdc.py  cleaned_articles.json  cleaned_posts.json  docker-compose.yml  insert_data_mongo.py  pyproject.toml  retriever.py  settings.py  test.py
course/module-3/data_flow/: bytewax_pipeline.py  cdc_trigger.py  mq.py  stream_input.py  stream_output.py
course/module-3/data_logic/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
course/module-3/db/: documents.py  mongo.py  qdrant.py
course/module-3/deploy/: Dockerfile  entrypoint.sh
course/module-3/finetune_data/: generate_data.py  llm_communicator.py
course/module-3/finetuning/: example_content.json  exceptions.py  file_handler.py  generate_data.py  llm_communication.py
course/module-3/llm_components/: chain.py  prompt_templates.py
course/module-3/models/: base.py  chunk.py  clean.py  embedded_chunk.py  raw.py
course/module-3/rag/: query_expanison.py  reranking.py  retriever.py  self_query.py
course/module-3/utils/: chunking.py  cleaning.py  embeddings.py
course/module-4/: .env.example  Makefile  README.md  build_config.yaml  dataset_client.py  dataset_handler.py  docker-compose.yml  example_content.json  generate_data_script.py  pyproject.toml  query_expanison.py  requirements.txt  reranking.py  retriever.py  self_query.py  settings.py  test_local.py  test_retriver.py
course/module-4/finetuning/: __init__.py  config.yaml  dataset_client.py  medium-validation.json  mixed-validation.json  model.py  requirements.txt  settings.py  utils.py
course/module-4/llm_components/: prompt_templates.py
course/module-4/main/: linkedin-train.json  linkedin-validation.json  medium-train.json  medium-validation.json  mixed-train.json  mixed-validation.json  model.py
course/module-4/playground/: playground.py
course/module-5/: .env.example  Makefile  inference.py  inference_pipeline.py  logger_utils.py  main.py  pyproject.toml  settings.py
course/module-5/db/: documents.py  mongo.py  qdrant.py
course/module-5/evaluation/: __init__.py  llm.py  rag.py
course/module-5/finetuning/: dataset_client.py  model.py
course/module-5/finetuning_model/: dataset_client.py  model.py
course/module-5/llm_components/: prompt_monitor.py  prompt_templates.py
course/module-5/model_evaluation/: evaluation.py  prompt_monitor.py
course/module-5/monitoring/: __init__.py  prompt_monitoring.py
course/module-5/rag/: reranking.py  retriever.py  self_query.py
data/: links.txt
module1/: .gitignore  config.py  db.py  docker-compose.yml  documents.py  pyproject.toml
module1/.docker/: Dockerfile.github  Dockerfile.linkedin  Dockerfile.medium
module1/crawlers/: base.py  github.py  linkedin.py  medium.py
module1/ops/: Pulumi.yaml  package-lock.json  package.json
module1/ops/infrastructure/: crawler-lambda-tasks.ts  vpc.ts
module1/ops/infrastructure/resources/: subnet.ts
module1/scripts/: deploy_github_lambda.sh  deploy_linkedin_lambda.sh  deploy_medium_lambda.sh
ops/: Pulumi.yaml  index.ts  package.json
scripts/: bytewax_entrypoint.sh
src/bonus_superlinked_rag/server/runner/: pyproject.toml
src/bonus_superlinked_rag/server/runner/executor/app/: main.py
src/bonus_superlinked_rag/server/runner/executor/app/configuration/: app_config.py
src/bonus_superlinked_rag/server/runner/executor/app/exception/: exception.py  exception_handler.py
src/bonus_superlinked_rag/server/runner/executor/app/router/: management_router.py
src/bonus_superlinked_rag/server/runner/executor/app/service/: file_object_serializer.py
src/bonus_superlinked_rag/server/runner/executor/app/util/: fast_api_handler.py
src/bonus_superlinked_rag/server/runner/poller/: Dockerfile  logging_config.ini
src/bonus_superlinked_rag/server/runner/poller/app/poller/: poller.py
src/bonus_superlinked_rag/server/runner/poller/app/resource_handler/: resource_handler_factory.py
src/bonus_superlinked_rag/server/runner/poller/app/resource_handler/gcs/: gcs_resource_handler.py
src/bonus_superlinked_rag/server/runner/poller/app/resource_handler/local/: local_resource_handler.py
src/bonus_superlinked_rag/server/runner/poller/app/resource_handler/s3/: s3_resource_handler.py
(+342 files in other folders)
