[tool.poetry]
name = "module1"
version = "0.1.0"
description = ""
authors = ["Deocding ML"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
aws-lambda-powertools = "^2.35.1"
langchain = "0.1.11"
langchain-openai = ">=0.0.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
