[tool.poetry]
name = "finetuning"
description = ""
version = "0.1.0"
authors = [
    "DecodingML Team <decodingml@gmail.com>",
    "Anca Muscalagiu <ancamuscalagiu1@gmail.com>"
    ]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.23.5"
pandas = "^2.2.2"
peft = "^0.11.0"
datasets = "^2.19.1"
transformers = "^4.40.2"
safetensors = "^0.4.3"
comet_ml = "^3.42.0"
accelerate = "^0.30.1"
bitsandbytes = "^0.42.0"
pydantic_settings="^2.2.1"
scikit-learn = "^1.4.2" 
qwak-sdk="^0.5.68"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
